# sqlite-web

./: .gitignore  Dockerfile  MANIFEST.in  PKGBUILD  Pipfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  run-docker  setup.py  test_sqlite_web.py
.github/workflows/: build_image.yml  build_latest_container.yml  build_release_container.yml  docker.yml  wheels.yaml
docker/: Dockerfile
docker-compose/: multi-user-example.yml
sampledata/: sample.sqlite
sqlite_browser/: sqlite_browser.py
sqlite_browser/static/css/: sqlbrowse.css
sqlite_browser/templates/: add_column.html  base.html  base_table.html  base_tables.html  drop_column.html  drop_index.html  drop_table.html  drop_trigger.html  index.html  table_content.html  table_import.html  table_query.html  table_structure.html
sqlite_web/: __main__.py  middleware.py  sqlite_web.py  utils.py  wsgi_server.py
sqlite_web/static/css/: bootstrap.min.css  (+3 more)
sqlite_web/templates/: _formhelpers.html  add_column.html  add_index.html  base.html  base_table.html  base_tables.html  delete_modal.html  drop_column.html  drop_index.html  drop_table.html  drop_trigger.html  edit_row.html  index.html  load.html  login.html  pagination.html  query.html  rename_column.html  row_truncated.html  rowplus.html  table_content.html  table_content_plus.html  table_delete.html  table_edit_record.html  table_export.html  table_import.html  table_insert.html  table_query.html  table_record.html  table_structure.html  table_update.html  unload.html  update_modal.html
wsgi_example/: README.md  wsgi_example.py
(+2 files in other folders)
